# syslog

./: pyproject.toml  syslog.py
