[tool.poetry]
name = "syslog"
version = "0.1.0"
description = "Runs through server health checks"
authors = ["Oatmeal4Breakfast <elvin.salcedo17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
